--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "@fluentui/react-northstar": "^0.66.5",
     "dataframe-js": "^1.4.4",
     "dotenv": "^16.4.5",
+    "i18next": "^21.6.3",
     "papaparse": "^5.4.1",
+    "react-i18next": "^15.4.0",
     "react-markdown": "^6.0.3",
     "react-sticky": "^6.0.3"
   },
