--- a/scripts/environments/local.env.example
+++ b/scripts/environments/local.env.example
@@ -83,6 +83,8 @@ export AZURE_OPENAI_CHATGPT_DEPLOYMENT=""
 export USE_AZURE_OPENAI_EMBEDDINGS=true # Required
 export AZURE_OPENAI_EMBEDDING_DEPLOYMENT_NAME="text-embedding-ada-002"
 
+# Target Size of the Chunk bits of the uploaded Documents
+export CHUNK_SIZE="750"
 # If you prefer an open-source Embedding model, use below section to set your preferred model:
 
 #-----------------------------------------------------------------------------------------------#
